# Herb

./: .gitignore  .gitmodules  README.md  dune  dune-project  example.herb  example1.herb  herb.opam  ollvm.opam
.devcontainer/: Dockerfile  devcontainer.json
lib/: calc.ml  compiler.ml  compiler_options.ml  dune  errors.ml  lexer.mll  loader.ml  loc.ml  parseherb.ml  parser.mly  parsetree.ml  pass.ml  pass_dsl.ml  passes.ml  util.ml
lib/abstract_passes/: passes.ml
lib/env/: errs.ml  loc.ml  pass.ml  proj.ml  proj.mli
lib/errs/: err_templates.ml  errs.ml  loc.ml
lib/ir/: ir.ml  ir_cleanup.ml  ir_prettyprint.ml  label.ml
lib/ll/: ll_builtins.ml  ll_defs.ml  ll_env.ml  ll_func.ml  ll_gen.ml  ll_instr.ml  ll_module.ml  ll_symtab.ml  ll_write.ml
lib/loader/: fs_loader.ml  loader.ml  module_checker.ml  tsort.ml
lib/lookup/: ident.ml  lookup.ml  lookup_ast.ml  lookup_entry.ml  lookuptree.ml  module_checker.ml  scope_manager.ml  scopetree.ml
lib/lowering/: ast.ml  hoisting.ml  lowering.ml
lib/monads/: monads.ml
lib/parser/: ast.ml  ast_operators.ml  dune  lexer_.mll  make_ast.ml  parser.ml  parser_.mly  parsetree.ml
lib/parsing/: dune  parsing_.ml
lib/typing/: typing.ml
lib/utils/: passes.ml  tsort.ml
runtime/: builtins.c
scripts/: test.sh
test/: dune  exec.t  io.t  lookup_negative.t  parser.t  test_exec.py  typing_negative.t
test/exec/: 000_empty.herb  000_return_nothing_from_entry.herb  001_smoke.herb  002_return_1_from_entry.herb  003_return_37_from_entry.herb  003_simple_assignment.herb  004_additive_calculations.herb  004_fact_8_inline.herb  005_multiplicative_calculations.herb  005_simple_if.herb  007_sum_from_0_to_100.herb  skip_001_return_unit_from_entry.herb
test/io/: 001_print_1337.herb  002_println_numbers.herb  003_print_numbers.herb  004_assert_truthful.herb  005_assert_falseful.herb
test/lookup_negative/: 001_undefined_toplevel_name.herb  002_undefined_local_name.herb  003_toplevel_block.herb  003_undefined_name_2.herb
test/parser/: 001_empty_entry.herb  002_simple_arithmetics.herb  003_complex_arithmetics.herb  004_assign_associativity.herb  005_toplevel_let.herb  006_if_expr.herb  010_fact.herb  (+10 more)
(+79 files in other folders)
